--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -508,9 +508,8 @@
             <subviews>
                 <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="chl-Vp-HVE">
                     <rect key="frame" x="-2" y="20" width="210" height="179"/>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" id="Pd7-v0-Fcz">
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Collections are groups to collect similar files and folders together, even from separate locations or cloud services." id="Pd7-v0-Fcz">
                         <font key="font" size="13" name="AvenirNext-MediumItalic"/>
-                        <string key="title">Collections are groups to hold your files and folders. Collect similar items together inside, even from separate location or cloud services.</string>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
