--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -532,7 +532,7 @@
             <subviews>
                 <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="chl-Vp-HVE">
                     <rect key="frame" x="18" y="20" width="201" height="179"/>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Collections are groups to collect similar files and folders together, even from separate locations or cloud services." id="Pd7-v0-Fcz">
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Collections are groups to collect similar files and folders together, even from separate locations or synced cloud folders." id="Pd7-v0-Fcz">
                         <font key="font" size="13" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
