--- a/Blik Mac/GLACollectionColorPickerViewController.xib
+++ b/Blik Mac/GLACollectionColorPickerViewController.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6245"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLACollectionColorPickerViewController">
@@ -67,18 +68,18 @@
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <customView identifier="colorChoice" translatesAutoresizingMaskIntoConstraints="NO" id="pRD-ff-Vrw" customClass="GLAColorChoiceView">
-                    <rect key="frame" x="10" y="10" width="32" height="32"/>
+                    <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="32" id="Jg5-x4-pJe"/>
-                        <constraint firstAttribute="width" constant="32" id="SN7-3t-HIc"/>
+                        <constraint firstAttribute="height" constant="52" id="Jg5-x4-pJe"/>
+                        <constraint firstAttribute="width" constant="52" id="SN7-3t-HIc"/>
                     </constraints>
                 </customView>
             </subviews>
             <constraints>
-                <constraint firstItem="pRD-ff-Vrw" firstAttribute="top" secondItem="fPQ-gN-IRX" secondAttribute="top" constant="10" id="LVS-bm-cR6"/>
+                <constraint firstItem="pRD-ff-Vrw" firstAttribute="top" secondItem="fPQ-gN-IRX" secondAttribute="top" id="LVS-bm-cR6"/>
                 <constraint firstAttribute="centerY" secondItem="pRD-ff-Vrw" secondAttribute="centerY" id="g0o-PM-aDP"/>
                 <constraint firstAttribute="centerX" secondItem="pRD-ff-Vrw" secondAttribute="centerX" id="gv6-Ez-6qL"/>
-                <constraint firstItem="pRD-ff-Vrw" firstAttribute="leading" secondItem="fPQ-gN-IRX" secondAttribute="leading" constant="10" id="zZD-AT-4w5"/>
+                <constraint firstItem="pRD-ff-Vrw" firstAttribute="leading" secondItem="fPQ-gN-IRX" secondAttribute="leading" id="zZD-AT-4w5"/>
             </constraints>
         </view>
     </objects>
